--- a/Library Management System Team-4/frontend/html/login.html
+++ b/Library Management System Team-4/frontend/html/login.html
@@ -128,7 +128,7 @@ body{
     </style>
 </head>
 <body>
-    <h2>LibraryManagement</h2>
+    <h2>LibraryManagementSystem</h2>
     
     <!-- Login Form -->
     <div class="login-form" id="login-form">
